SPM-1416: Add baseline description field
